[API] Add route `GET /swagger.json`
